<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="net.shreygupta.scorekeeper.MainActivity">

        <TextView

            android:id="@+id/gamename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/game_name"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="32sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/linearlayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/gamename"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="sans-serif-medium"
                    android:padding="16dp"
                    android:text="@string/team_1"
                    android:textColor="@color/grey700"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/team_a_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/initial_score"
                    android:textColor="@android:color/black"
                    android:textSize="56sp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginTop="24dp"
                    android:onClick="addTwoTeamA"
                    android:text="@string/button1" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="addOneTeamA"
                    android:text="@string/button2" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="addTwoTeamA"
                    android:text="@string/button3" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="addTwoTeamA"
                    android:text="@string/button4" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="addOneTeamA"
                    android:text="@string/button5" />

            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="sans-serif-medium"
                    android:padding="16dp"
                    android:text="@string/team_2"
                    android:textColor="@color/grey700"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/team_b_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/initial_score"
                    android:textColor="@android:color/black"
                    android:textSize="56sp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginTop="24dp"
                    android:onClick="addTwoTeamB"
                    android:text="@string/button1" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="addOneTeamB"
                    android:text="@string/button2" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="addTwoTeamB"
                    android:text="@string/button3" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="addTwoTeamB"
                    android:text="@string/button4" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="addOneTeamB"
                    android:text="@string/button5" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/linearlayout1"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="32dp"
            android:background="@color/reset_button"
            android:onClick="reset"
            android:text="@string/button_reset"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

    </RelativeLayout>

</ScrollView>